Add tables within panels

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Vacation blah</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">  </head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+
   <body>
 
     <div class="container">
@@ -38,36 +41,133 @@
 
       <h2>Vacation Packages</h2>
 
+
+
+
+
       <div class="row">
+
         <div class="col-md-4">
-          <div class="panel panel-default">
+          <div class="panel panel-info">
             <div class="panel-heading">
               <h3 class="panel-title">Good</h3>
             </div>
             <div class="panel-body">
-              Panel content
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<!-- start of test row -->
+              <div class="row">
+                <div class="col-md-6">
+                  <p>dummy content</p>
+                  <p>dummy content</p>
+                  <p>dummy content</p>
+                </div>
+                  <div class="col-md-6">
+                    <img src="img/beach.jpg" alt="beach" width="100%">
+                  </div>
+              </div>
+              <table class="table">
+                <tr>
+                  <th>no</th>
+                  <th>no</th>
+                  <th>no</th>
+                  <th>no</th>
+                </tr>
+                <tr>
+                  <td>stuff</td>
+                  <td>goes</td>
+                  <td>in</td>
+                  <td>here</td>
+                </tr>
+                  <td>stuff</td>
+                  <td>goes</td>
+                  <td>in</td>
+                  <td>here</td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
 
+
         <div class="col-md-4">
-          <div class="panel panel-default">
+          <div class="panel panel-warning">
             <div class="panel-heading">
               <h3 class="panel-title">Better</h3>
             </div>
             <div class="panel-body">
-              Panel content
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<!-- start of test row -->
+              <div class="row">
+                <div class="col-md-6">
+                  <p>dummy content</p>
+                  <p>dummy content</p>
+                  <p>dummy content</p>
+                </div>
+                  <div class="col-md-6">
+                    <img src="img/beach.jpg" alt="beach" width="100%">
+                  </div>
+              </div>
+              <table class="table">
+                <tr>
+                  <th>no</th>
+                  <th>no</th>
+                  <th>no</th>
+                  <th>no</th>
+                </tr>
+                <tr>
+                  <td>stuff</td>
+                  <td>goes</td>
+                  <td>in</td>
+                  <td>here</td>
+                </tr>
+                  <td>stuff</td>
+                  <td>goes</td>
+                  <td>in</td>
+                  <td>here</td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
 
+
         <div class="col-md-4">
-          <div class="panel panel-default">
+          <div class="panel panel-danger">
             <div class="panel-heading">
               <h3 class="panel-title">Best</h3>
             </div>
             <div class="panel-body">
-              Panel content
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<!-- start of test row -->
+              <div class="row">
+                <div class="col-md-6">
+                  <p>dummy content</p>
+                  <p>dummy content</p>
+                  <p>dummy content</p>
+                </div>
+                  <div class="col-md-6">
+                    <img src="img/beach.jpg" alt="beach" width="100%">
+                  </div>
+              </div>
+              <table class="table">
+                <tr>
+                  <th>no</th>
+                  <th>no</th>
+                  <th>no</th>
+                  <th>no</th>
+                </tr>
+                <tr>
+                  <td>stuff</td>
+                  <td>goes</td>
+                  <td>in</td>
+                  <td>here</td>
+                </tr>
+                  <td>stuff</td>
+                  <td>goes</td>
+                  <td>in</td>
+                  <td>here</td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
